src/widgets/kernel/qwidget.cpp
@@ -6057,8 +6057,25 @@ void QWidgetPrivate::setWindowTitle_sys(const QString &caption)
         return;
 
     if (QWindow *window = q->windowHandle())
+    {
+#if QT_CONFIG(accessibility)
+        QString oldAccessibleName;
+        const QAccessibleInterface *accessible = QAccessible::isActive()
+                                               ? QAccessible::queryAccessibleInterface(q)
+                                               : nullptr;
+        if (accessible)
+            oldAccessibleName = accessible->text(QAccessible::Name);
+#endif
+
         window->setTitle(caption);
 
+#if QT_CONFIG(accessibility)
+        if (accessible && accessible->text(QAccessible::Name) != oldAccessibleName) {
+            QAccessibleEvent event(q, QAccessible::NameChanged);
+            QAccessible::updateAccessibility(&event);
+        }
+#endif
+    }
 }
 
 void QWidgetPrivate::setWindowIconText_helper(const QString &title)
@@ -6124,13 +6141,6 @@ void QWidget::setWindowTitle(const QString &title)
     if (QWidget::windowTitle() == title && !title.isEmpty() && !title.isNull())
         return;
 
-#if QT_CONFIG(accessibility)
-    QString oldAccessibleName;
-    const QAccessibleInterface *accessible = QAccessible::queryAccessibleInterface(this);
-    if (accessible)
-        oldAccessibleName = accessible->text(QAccessible::Name);
-#endif
-
     Q_D(QWidget);
     d->topData()->caption = title;
     d->setWindowTitle_helper(title);
@@ -6139,13 +6149,6 @@ void QWidget::setWindowTitle(const QString &title)
     QCoreApplication::sendEvent(this, &e);
 
     emit windowTitleChanged(title);
-
-#if QT_CONFIG(accessibility)
-    if (accessible && accessible->text(QAccessible::Name) != oldAccessibleName) {
-        QAccessibleEvent event(this, QAccessible::NameChanged);
-        QAccessible::updateAccessibility(&event);
-    }
-#endif
 }
 
 
